--- a/code/d1mini/games/package.json
+++ b/code/d1mini/games/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "npm run clean && rollup -c",
+    "build": "npm run clean && rollup -c && npx shx cp public/build/* ../data/games/",
     "clean": "npx rimraf public/build/*",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear"
@@ -18,6 +18,7 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "shx": "^0.3.3",
     "svelte": "^3.0.0"
   },
   "dependencies": {
