ability to modify panel size in captive portal

--- a/code/d1mini/data/settings.json
+++ b/code/d1mini/data/settings.json
@@ -1,5 +1,7 @@
 {
 	"brightness" : "1",
 	"bootcommand" : "",
-	"bootcommanddescription": ""
+	"bootcommanddescription": "",
+	"panelwidth": "6",
+    "panelheight": "2"
 }
